# hecaton

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: broker-image.yml
bootstrap/: install.sh  pyproject.toml
bootstrap/cluster/: 20-install-k3s-server.sh  21-install-k3s-agent.sh  22-install-device-plugins.py  22-install-device-plugins.sh  23-install-agent-sandbox.sh  24-apply-sandboxes.py  24-apply-sandboxes.sh  24-apply-templates.sh  25-install-subnet-router.sh  26-install-broker.sh  26-stage-agent-tools.sh  27-install-monitoring.py  27-install-monitoring.sh
bootstrap/lib/: __init__.py  inventory.py  k8s.py  monitoring.py  remote.py  versions.py
bootstrap/network/: 10-install-tailscale.sh
config/examples/: hosts.yaml  tailnet-policy.hujson
dev/: infra.sh  iter.sh  release.sh
envs/: pyproject.toml  trainer-entrypoint.sh
envs/hecaton_envs/: __init__.py  errors.py  provider.py  scaffolds.py
examples/trainer-smoke/: Dockerfile  run.py  run_r2egym.py
lib/: agent-sandbox-version.sh  common.sh  gpu-version.sh  inventory.sh  k3s-version.sh  k3s.sh  monitoring-version.sh  remote.sh  version.sh
lib/hecaton/: remote.py
ops/: maintenance-host.sh  remove-host.sh
platform/broker/: API.md  Dockerfile  broker.py  build-and-import.sh  deployment.yaml  pyproject.toml
platform/monitoring/: values.yaml
platform/network/: subnet-router.yaml
scripts/: bypass-vpn-for-hecaton.sh  install-hooks.sh  preflight.sh  scan-secrets.sh  setup-trainer.sh
scripts/git-hooks/: pre-commit
(+13 files in other folders)
