[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hecaton-envs"
version = "0.0.1"
description = "Trainer-side SDK for the hecaton sandbox fleet."
requires-python = ">=3.10"
dependencies = [
  "httpx[socks]>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hecaton_envs*"]
